--- a/package.json
+++ b/package.json
@@ -11,18 +11,25 @@
   "author": "Darius Kulevičius",
   "license": "MIT",
   "dependencies": {
+    "@heroku-cli/notifications": "^1.2.2",
     "@sendgrid/mail": "^7.6.1",
     "@types/crypto-js": "^4.1.1",
     "@types/es6-shim": "^0.31.42",
     "@types/express": "^4.17.13",
+    "@types/express-fileupload": "^1.2.2",
     "@types/jira-client": "^7.1.4",
     "@types/lodash": "^4.14.181",
+    "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
+    "csv": "^6.0.5",
+    "csv-parser": "^3.0.0",
+    "csvtojson": "^2.0.10",
     "express": "^4.17.2",
+    "express-fileupload": "^1.3.1",
     "express-jwt": "^6.1.0",
     "form-data": "^4.0.0",
     "jira-client": "^8.1.0",
@@ -32,6 +39,7 @@
     "lodash": "^4.17.21",
     "mailgun.js": "^5.0.1",
     "moment": "^2.29.1",
+    "multer": "^1.4.4",
     "mysql": "github:mysqljs/mysql",
     "mysql2": "^2.3.3",
     "node-notifier": "^10.0.1",
