--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Server for time management system",
   "main": "index.js",
   "scripts": {
-    "tsc": "nodemon index.ts",
+    "tsc": "nodemon --exec npx ts-node ./index.ts",
     "postinstall": "tsc",
     "start": "./node_modules/.bin/ts-node index.ts"
   },
