--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@types/es6-shim": "^0.31.42",
     "@types/express": "^4.17.13",
     "@types/express-fileupload": "^1.2.2",
+    "@types/html-pdf": "^3.0.0",
     "@types/jira-client": "^7.1.4",
     "@types/lodash": "^4.14.181",
+    "@types/moment-duration-format": "^2.2.3",
     "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.4",
     "bcryptjs": "^2.4.3",
@@ -32,19 +34,24 @@
     "express-fileupload": "^1.3.1",
     "express-jwt": "^6.1.0",
     "form-data": "^4.0.0",
+    "html-pdf": "^3.0.1",
     "jira-client": "^8.1.0",
     "jsonwebtoken": "^8.5.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.23",
     "labelmake": "^2.0.21",
     "loadash": "^1.0.0",
     "lodash": "^4.17.21",
     "mailgun.js": "^5.0.1",
     "moment": "^2.29.1",
+    "moment-duration-format": "^2.3.2",
     "multer": "^1.4.4",
     "mysql": "github:mysqljs/mysql",
     "mysql2": "^2.3.3",
     "node-notifier": "^10.0.1",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
+    "pdfkit-table": "^0.1.86",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.16.1",
     "sequelize-typescript": "^2.1.3",
