--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/nodemailer": "^6.4.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "csv": "^6.0.5",
